[tool.poetry]
name = "machinelearning"
version = "1"
description = "Projet pour le cours de machine learning 2024-2025"
authors = ["Louise EGAIN <louiseegain2401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
